--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title:          Stefano Dalla Bona
-description:    "Rain is a simple and clean Jekyll theme with focus on content."
-url:            https://github.com/inelaah/rain
+description:    Personal Webpage
+url:           https://stefanodallabona.github.io
 
 # Author
-author:
-  name:         Inela Avdic Hukic
-  email:        inelaah@gmail.com
-  url:          https://inelaah.com
+author:      Stefano Dalla Bona
+  name:        
+  email:        stefanodallabona97@gmail.com
+  url:          
 
 # Build settings
 markdown:       kramdown
@@ -34,7 +34,5 @@ related_posts_section:
 
 # Links to social media
 social:
-  email: inelaah@gmail.com
-  github: https://github.com/inelaah
-  twitter: https://twitter.com
-  linkedin: https://ba.linkedin.com/in/inela-avdic-hukic-322354131
+  email: stefanodallabona97@gmail.com
+  github: https://github.com/StefanoDallaBona
