--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title:          Stefano Dalla Bona
-description:    Personal Webpage
-url:           https://stefanodallabona.github.io
+description:    "Personal Webpage"
+url:            https://github.com/inelaah/rain
 
 # Author
-author:      Stefano Dalla Bona
-  name:        Stefano
-  email:        stefanodallabona97@gmail.com
-  url:           https://stefanodallabona.github.io
+author:
+  name:         Inela Avdic Hukic
+  email:        inelaah@gmail.com
+  url:          https://inelaah.com
 
 # Build settings
 markdown:       kramdown
@@ -34,7 +34,7 @@ related_posts_section:
 
 # Links to social media
 social:
-  email: stefanodallabona97@gmail.com
-  twitter: 
-  linkedIn: 
-  github: https://github.com/StefanoDallaBona
+  email: inelaah@gmail.com
+  github: https://github.com/inelaah
+  twitter: https://twitter.com
+  linkedin: https://ba.linkedin.com/in/inela-avdic-hukic-322354131
