--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ related_posts_section:
 
 # Links to social media
 social:
-  email: inelaah@gmail.com
-  github: https://github.com/inelaah
+  email: stefanodallabona97@gmail.com
+  github: https://github.com/StefanoDallaBona
   twitter: https://twitter.com
   linkedin: https://ba.linkedin.com/in/inela-avdic-hukic-322354131
