--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ url:            https://github.com/inelaah/rain
 
 # Author
 author:
-  name:         Inela Avdic Hukic
-  email:        inelaah@gmail.com
-  url:          https://inelaah.com
+  name:         Stefano Dalla Bona
+  email:        stefano.dallabona@phd.unipd.it
+  url:         
 
 # Build settings
 markdown:       kramdown
@@ -36,5 +36,5 @@ related_posts_section:
 social:
   email: stefanodallabona97@gmail.com
   github: https://github.com/StefanoDallaBona
-  twitter: https://twitter.com
-  linkedin: https://ba.linkedin.com/in/inela-avdic-hukic-322354131
+  twitter: 
+  linkedin: 
