--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          Stefano Dalla Bona
+title:          Le mie attività
 description:    "Personal Webpage"
 url:            https://github.com/inelaah/rain
 
